--- a/src/view/layout/nav.html
+++ b/src/view/layout/nav.html
@@ -2,8 +2,12 @@
   <div class="w">
     <div class="user-info">
       <span class="user not-login">
-        <span class="link js-login">登录</span>
-        <span class="link js-register">注册</span>
+        <a class="link" href="./user-login.html">
+          <span class="link js-login">登录</span>
+        </a>
+        <a class="link" href="./user-register.html">
+          <span class="link js-register">注册</span>
+        </a>
       </span>
       <span class="user login">
         <span class="link">欢迎,
