--- a/src/page/user-pass-reset/index.css
+++ b/src/page/user-pass-reset/index.css
@@ -1,70 +1,77 @@
 /*
  * @Author: Xiaochun 
- * @Date: 2020-09-24 10:13:45 
+ * @Date: 2020-09-24 16:26:22 
  * @Last Modified by: Xiaochun
- * @Last Modified time: 2020-09-24 10:41:58
+ * @Last Modified time: 2020-09-24 17:18:25
  */
 
 /* 最外层容器 */
 .page-wrap{
-    padding: 40px 0;
-    background: #e72955;
+  padding: 40px 0;
 }
 /* 表单框 */
 .user-con{
-    position: relative;
-    margin: 0 auto;
-    width: 400px;
-    background: #fff;
+  position: relative;
+  margin: 0 auto;
+  width: 400px;
+  background: #fff;
 }
 .user-con .user-title{
-    text-align: center;
-    padding: 10px 0;
-    border-bottom: 1px solid #ddd;
-    font-size: 18px;
-    font-weight: bold;
-    color: #666;
+  text-align: center;
+  padding: 10px 0;
+  border-bottom: 1px solid #ddd;
+  font-size: 18px;
+  font-weight: bold;
+  color: #666;
 }
 .user-con .user-box{
-    padding: 20px;
+  padding: 20px;
 }
 /* 错误提示框 */
 .user-con .user-box .error-item{
-    position: relative;
-    padding: 4px 0 4px 40px;
-    margin-bottom: 10px;
-    border: 1px solid red;
-    color: red;
-    background: #fde9e9;
-    display: none;
+  position: relative;
+  padding: 4px 0 4px 40px;
+  margin-bottom: 10px;
+  border: 1px solid red;
+  color: red;
+  background: #fde9e9;
+  display: none;
 }
-/*错误图标*/
+/* 错误图标 */
 .user-con .user-box .error-icon{
   position: absolute;
-  left:14px;
-  top:50%;
-  font-size:14px;
+  left: 14px;
+  top: 50%;
+  font-size: 14px;
   margin-top: -7px;
 }
-
+/* 每一步的容器 */
+.user-con .step-con{
+  display: none;
+}
+/* 输入框提示信息 */
+.user-con .user-item-text{
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+/* 输入框容器 */
 .user-con .user-item{
   position: relative;
   margin-bottom: 20px;
 }
 .user-con .user-item .user-label{
   position: absolute;
-  left:1px;
-  top:1px;
+  left: 1px;
+  top: 1px;
   bottom: 1px;
   width: 40px;
   line-height: 36px;
   background: #f3f3f3;
   font-size: 18px;
-  color:#d3d3d3;
+  color: #d3d3d3;
   text-align: center;
   border-right: 1px solid #bdbdbd;
 }
-
 .user-con .user-item .user-content{
   padding: 10px 0 10px 50px;
   width: 308px;
