--- a/src/util/slider/index.css
+++ b/src/util/slider/index.css
@@ -1,9 +1,10 @@
 /*
-* @Author: Rosen
-* @Date:   2017-05-26 18:19:21
-* @Last Modified by:   Rosen
-* @Last Modified time: 2017-05-26 19:12:42
-*/
+ * @Author: Xiaochun 
+ * @Date: 2020-10-22 16:37:15 
+ * @Last Modified by:   Xiaochun 
+ * @Last Modified time: 2020-10-22 16:37:15 
+ */
+
 /* banner */
 .banner{
     position: relative; 
